<resources>
    <string name="app_name">Motiv8</string>
    <string name="title_activity_task">Add a Task</string>
    <string name="title_activity_quote">Add a quote</string>

    <!-- Bottom Navigation Bar Titles -->
    <string name="title_home">Timer</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_quotes">Quotes</string>

    <!-- Button Text -->
    <string name="add_button_text">Add</string>
    <string name="start_timer_button">Start Timer</string>

    <!-- Hint Strings -->
    <string name="task_hint_title">Math 1148</string>
    <string name="task_hint_description">Class on Fridays</string>
    <string name="task_priority_hint">Low</string>
    <string name="task_time_hint">10:15 pm</string>
    <string name="default_time_hint">00:00</string>

    <!-- Strings related to Notifications -->
    <string name="notification_channel">Quote Channel</string>
    <string name="notification_channel_description">Used for Quote Notifications</string>

    <!-- Strings for Task Related changes/additions -->
    <string name="task_title">Title</string>
    <string name="enter_task_title">Enter Task Title</string>
    <string name="task_description">Description</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="task_priority">Priority</string>
    <string name="toast_added_task">Task has been added</string>
    <string name="toast_updated_task">Task has been updated</string>
    <string name="toast_deleted_task">Task has been deleted</string>

    <!-- Strings related to task priorities -->
    <string name="low_priority">Low</string>
    <string name="medium_priority">Medium</string>
    <string name="high_priority">High</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete_tasks">Delete All Tasks</string>
    <string name="action_delete">Delete Task</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_quote">Quotes</string>

    <string name="pref_title_sync_frequency">Frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>


    <string name="pref_quote_category">Category</string>
    <string-array name="pref_quote_category">
        <item>Change</item>
        <item>Forgiveness</item>
        <item>Friendship</item>
        <item>Motivational</item>
        <item>Hope</item>
        <item>Love</item>
        <item>Love</item>
    </string-array>
    <string-array name="pref_quote_category_values">
        <item>Change</item>
        <item>Forgiveness</item>
        <item>Friendship</item>
        <item>Motivational</item>
        <item>Hope</item>
        <item>Love</item>
        <item>Love</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings related to content descriptions -->
    <string name="notification_image_description">Notification Image</string>
</resources>
